First commited as before_7382_rev1